--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "node-twitterbot": "^0.2.2",
-    "twit": "^2.2.11"
+    "twit": "^2.2.11",
+    "node-chartjs": "^0.0.7"
   }
 }
