--- a/package.json
+++ b/package.json
@@ -10,12 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "node-twitterbot": "^0.2.2",
-    "twit": "^2.2.11",
-    "node-chartjs": "^0.0.7",
-    "chart.js": "2.4.0",
-    "opn": "^5.2.0",
-    "canvas": "^2.6.1",
-    "discord.js": "^12.2.0",
-    "cairo": "^0.1.0-alpha.2"
+    "twit": "^2.2.11"
   }
 }
